[project]
name = "research-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
    "langsmith>=0.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
]
